<resources>
    <string name="app_name">My Application</string>
    <string name="continue_process">Continue</string>
    <string name="toast_please_enter_all_information">Please enter all the information</string>
    <string name="save_changes_successfully">Save changes successfully</string>
    <string name="login_title">Welcome back</string>
    <string name="login_desc">Log in to continue learning with us</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup_title">Create a new account</string>
    <string name="signup_desc">Join the Lexa learning community today</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register_linked_account">Register linked account</string>
    <string name="enter_information">Or enter information</string>
    <string name="name">Name</string>
    <string name="example_name">Nguyen Van A</string>
    <string name="birth_date">Date of birth</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="login">Log in</string>
    <string name="login_with_google">" Login with Google"</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="title_footer">Developed by HCMUS \@ 2024</string>
    <string name="register_now">Register now</string>
    <string name="already_have_account">Already have an account</string>
    <string name="toast_login_successfully">Login successfully</string>
    <string name="toast_login_google_successfully">Login with Google successfully</string>
    <string name="toast_login_google_failed">Login with Google failed</string>
    <string name="toast_wrong_email_or_password">Incorrect email or password</string>
    <string name="toast_error_occured">An error occured</string>
    <string name="toast_change_email_successfully">Update email successfully</string>
    <string name="toast_change_email_failed">Update email failed</string>
    <string name="toast_update_password_successfully">Update password successfully</string>
    <string name="toast_update_password_failed">Update password failed</string>
    <string name="toast_old_password_incorrect">Old password is incorrect</string>
    <string name="forget_password">Forget password</string>
    <string name="enter_email_to_reset">Enter your account email to receive an OTP code</string>
    <string name="reset_password_title">Reset password</string>
    <string name="enter_your_new_password">Enter new password for your account</string>
    <string name="toast_account_not_registered">The account is not registered</string>
    <string name="new_password">New password</string>
    <string name="verify_new_password">Verify new password</string>
    <string name="toast_reset_password_successfully">Reset password successfully</string>
    <string name="toast_reset_password_fail">Reset password fail</string>
    <string name="signup_teacher_title">Create <teache></teache>r account</string>
    <string name="signup_teacher_desc">Join the teaching staff at Lexa</string>
    <string name="signup">Sign up</string>
    <string name="signup_with_google">" Signup with Google"</string>
    <string name="certificate_language">Foreign language certificate</string>
    <string name="certificate_degree">Teaching degree or related (recommended)</string>
    <string name="authenticity_commitment">I guarantee that the degree is original and unedited. I take full responsibility for the authenticity of the documents.</string>
    <string name="toast_wrong_email_format">Wrong email format</string>
    <string name="toast_confirm_password_not_match">Verify password does not match</string>
    <string name="toast_wrong_birthday_format">Wrong birthday format (dd/mm/yyyy)</string>
    <string name="toast_please_provide_language_cert">Please provide your language certificate</string>
    <string name="toast_email_already_used">Email has already been used</string>
    <string name="toast_account_already_used">Account has already been used</string>
    <string name="toast_signup_successfully">Signup successfully</string>
    <string name="toast_signup_google_successfully">Signup with Google successfully</string>
    <string name="toast_signup_google_failed">Signup with Google failed</string>
    <string name="please_confirm_qualifications">Please confirm your qualifications</string>
    <string name="open_media_library">Open media library</string>
    <string name="otp_title">Enter OTP code</string>
    <string name="otp_desc">Open your %1$s mailbox to get the code</string>
    <string name="otp_confirm">Haven\'t received the code from your mailbox?</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="otp_resend_enabled_after_seconds">Resend after %1$s seconds</string>
    <string name="toast_otp_resent">The OTP code has been resent</string>
    <string name="toast_otp_wrong_or_expired">OTP code is invalid or expired</string>
    <string name="toast_verify_otp_successfully">Verify OTP successfully</string>
    <string name="toast_verify_otp_failed">Verify OTP failed</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="day">Day %1$s</string>
    <string name="study_time">Study time</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="featured_course">Featured courses</string>
    <string name="see_all">See all</string>
    <string name="studying">Currently studying</string>
    <string name="your_favorite">Your favorites</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="lesson">Lesson</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="course">Course</string>
    <string name="profile">Profile</string>
    <string name="achievement">Achievements</string>
    <string name="total_lesson">Total lessons taken</string>
    <string name="favorite_vocabulary_set">Favorite vocabulary sets</string>
    <string name="search_placeholder_favorite">Search for vocabulary sets, topics,&#8230;</string>
    <string name="favorite">Favorite</string>
    <string name="personal">Personal</string>
    <string name="start_practice">Start practicing</string>
    <string name="search_course">Search for courses,&#8230;</string>
    <string name="word_list">Word list</string>
    <string name="edit">Edit</string>
    <string name="flashcard_detail_desc">You have viewed the entire list. Let\'s start practicing to memorize these words!</string>
    <string name="start_practice_action">Start practicing</string>
    <string name="edit_flashcard">Edit flashcard</string>
    <string name="illustration_image">Illustration image</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="word_type">Part of speech</string>
    <string name="definition">Definition</string>
    <string name="example_sentence">Example</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="practice_upper">PRACTICE</string>
    <string name="not_memorized_upper">NOT MEMORIZED</string>
    <string name="memorized_upper">MEMORIZED</string>
    <string name="word">Word</string>
    <string name="tap_to_go_back">Tap to go back</string>
    <string name="tap_to_show_meaning">Tap to show meaning</string>
    <string name="completed_upper">COMPLETED</string>
    <string name="learned_words">%1$s words learned</string>
    <string name="congratulation_title">Congratulations, your progress has increased by %1$s</string>
    <string name="congratulation_desc">Keep up the good work</string>
    <string name="practice_unmemorized_words">Practice unmemorized words</string>
    <string name="practice_again">Practice again</string>
    <string name="exit">Exit</string>
    <string name="results_count">%1$s results</string>
    <string name="teacher_upper">TEACHER</string>
    <string name="student_upper">STUDENT</string>
    <string name="favorite_upper">FAVORITE</string>
    <string name="course_introduction">Course introduction</string>
    <string name="learning_path">Learning path</string>
    <string name="continue_learning_now">Continue learning now</string>
    <string name="search_flashcard">Search for vocabulary,&#8230;</string>
    <string name="flashcard_list">Flashcard list</string>
    <string name="quick_learning_tips">Quick learning tips</string>
    <string name="flashcard_note_desc">Tap the card to see the meaning and example. Don\'t forget to turn on the sound to hear the correct pronunciation.</string>
    <string name="lesson_progress_upper">LESSON PROGRESS</string>
    <string name="completed_percentage">Completed %1$s</string>
    <string name="paragraph">Paragraph %1$s</string>
    <string name="listen_sample">Listen to sample</string>
    <string name="listen_again">Listen again</string>
    <string name="tap_mic_to_speak">Tap the microphone to speak</string>
    <string name="edit_course">Edit course</string>
    <string name="course_name">Course name</string>
    <string name="course_type">Course type</string>
    <string name="lesson_path">Lesson path %1$s</string>
    <string name="study_day_name">Study day name</string>
    <string name="score">Score</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="medium">Medium</string>
    <string name="study_again">Study again</string>
    <string name="return_to_course">Return to course</string>
    <string name="listen_standard_pronunciation">Listen to standard pronunciation</string>
    <string name="listen_my_audio_again">Listen to my audio again</string>
    <string name="personal_profile">Profile</string>
    <string name="study_statistics">STUDY STATISTICS</string>
    <string name="studying_courses">Current course</string>
    <string name="vocabulary_decks">Vocabulary deck</string>
    <string name="weekly_study_time">Weekly study time</string>
    <string name="total_amount">Total %1$s</string>
    <string name="total_hours_minutes">Total: %1$d hours %2$d minutes</string>
    <string name="total_minutes">Total: %1$d minutes</string>
    <string name="streak_days">%1$d days 🔥</string>
    <string name="account_and_security_upper">ACCOUNT AND SECURITY</string>
    <string name="personal_information">Personal information</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_new_password">Verify new password</string>
    <string name="change_email">Change email</string>
    <string name="app_settings_upper">APP SETTINGS</string>
    <string name="language">Language</string>
    <string name="notification">Notifications</string>
    <string name="logout">Log out</string>
    <string name="full_name_upper">FULL NAME</string>
    <string name="birth_date_upper">DATE OF BIRTH</string>
    <string name="address_upper">ADDRESS</string>
    <string name="save_changes">Save changes</string>
    <string name="popup_warning_logout">"Unsaved data may be lost. Do you still want to log out?"</string>
    <string name="do_you_want_create_your">Do you want create your?</string>
    <string name="content_create_your">" Switch to the Personal tab to begin building your own deck."</string>
    <string name="go_to_personal_tab">Go to personal tab</string>
    <string name="quit">Quit</string>
</resources>