<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.home.lexa.ui.components.HeaderSection
            android:id="@+id/headerSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_outline_book_ribbon"
                app:tint="#E0E0FF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/do_you_want_create_your"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/content_create_your"
                android:textColor="#777777"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvGoToPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/go_to_personal_tab"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:textColor="#6200EE"
                android:textStyle="bold"
                android:padding="8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>